--- a/app/views/meals/show.html.erb
+++ b/app/views/meals/show.html.erb
@@ -7,3 +7,6 @@
   <strong>Text:</strong>
   <%= @meal.text %>
 </p>
+
+<%= link_to 'Edit', edit_meal_path(@meal) %> |
+<%= link_to 'Back', meals_path %>
