--- a/app/views/meals/index.html.erb
+++ b/app/views/meals/index.html.erb
@@ -2,19 +2,25 @@
 
 <table>
   <tr>
-    <th>Title</th>
-    <th>Text</th>
+    <th>Date</th>
+    <th>Meal</th>
+    <th>Notes</th>
+    <th>Links</th>
     <th></th>
   </tr>
 
   <% @meals.each do |meal| %>
 
-    <tr>
-      <td><%= meal.title %></td>
-      <td><%= meal.text %></td>
-      <td><%= link_to 'Show', meal_path(meal) %></td>
-    </tr>
-  
+  <tr>
+    <td><%= meal.created_at %></td>
+    <td><%= link_to meal.title, meal_path(meal) %></td>
+    <td><%= meal.text %></td>
+    <td><%= link_to 'Edit', edit_meal_path(meal) %></td>
+    <td><%= link_to 'Delete', meal_path(meal),
+    method: :delete,
+    data: { confirm: 'Are you sure?' } %></td>
+  </tr>
+
   <% end %>
 </table>
 
