fixed breaks in if

--- a/app/views/home_screen/index.html.erb
+++ b/app/views/home_screen/index.html.erb
@@ -70,10 +70,15 @@
 
       switch (gon.count){
         case 1: drawGrassSingle(20);
+        break;
         case 2: drawGrassDouble(40);
+        break;
         case 3: drawSapling(60);
+        break;
         case 4: drawPlant(80);
+        break;
         case 5: drawTree(100);
+        break;
         case 6: drawGrassSingle(20);
         drawGrassDouble(50);
         drawSapling(80);
@@ -85,12 +90,14 @@
         drawSapling(80);
         drawPlant(120);
         drawTree(160);
+        break;
         case 8: drawGrassDouble(20);
         drawSapling(50);
         drawPlant(80);
         drawTree(120);
         drawTree(160);
         case 9: drawSapling(20);
+        break;
       }
     }
 
