--- a/app/views/home_screen/index.html.erb
+++ b/app/views/home_screen/index.html.erb
@@ -7,63 +7,187 @@
   integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8="
   crossorigin="anonymous"></script>
   <script type="text/javascript" charset="utf-8">
-  // alert(gon.firstDay)
+  alert(gon.created_at)
   </script>
 </head>
 
 <body>
 
+  <!-- GAME DISPLAY  -->
+  <div id="gameDisplay" style="overflow: hidden">
+    <canvas id="scrollableGame" width="3840px"></canvas>
+  </div>
+  <!--
   <h1>VegRising POC</h1>
-  <p></p>
 
   <%= link_to "Sign up now!", signup_path, class: "btn btn-primary" %>
-  <p>
+   -->
 
-    <!-- GAME DISPLAY  -->
-    <canvas id="myCanvas" width="320" height="240"></canvas></p>
 
-    <!-- DASHBOARD -->
-    <p>Succesful Meals Ratio:</p>
-    <p>Carbon Emissions Saved:</p>
-    <p>Community Impact:</p>
-    <p>
+  <!-- DASHBOARD -->
+  <p>Succesful Meals Ratio:</p>
+  <p>Carbon Emissions Saved:</p>
+  <p>Community Impact:</p>
 
-      <!-- Features -->
-      <form method="" action="meals/new">
 
-        <button id ="add meal"class="btn btn-primary" name="addEntry" value="Submit" />
-        Track Meal </button>
+  <!-- Features -->
+  <div>
+    <form method="" action="meals/new">
 
-      </form>
+      <button id ="add meal"class="btn btn-primary" name="addEntry" value="Submit" />
+      Track Meal </button>
 
-      <form method="get" action="FindRestaurants">
+    </form>
 
-        <button id ="find rests"class="btn btn-primary" name="addEntry" value="Submit" />
-        Restaurants </button>
 
-      </form>
+    <form method="post" action="QrCode">
 
-      <form method="post" action="QrCode">
+      <button id ="Scan QR Code"class="btn btn-primary" name="addEntry" value="Submit" />
+      Scan QR </button>
 
-        <button id ="Scan QR Code"class="btn btn-primary" name="addEntry" value="Submit" />
-        Scan QR </button>
+    </form>
 
-      </form>
+  </div>
 
-      <form method="get" action="Lifestyle">
 
-        <button id ="add meal"class="btn btn-primary" name="addEntry" value="Submit" />
-        Lifestyle </button>
+  <script>
 
-      </form>
-    </p>
+  (function() {
+    var display = document.getElementById('gameDisplay');
+    var canvas = document.getElementById('scrollableGame'),
+    context = canvas.getContext('2d');
+    var dragging = false;
+    var lastX;
+    var marginLeft = 0;
 
-    <script>
 
-    var c = document.getElementById("myCanvas");
-    var ctx = c.getContext("2d");
-    drawScene();
-    function drawScene(){
+    canvas.addEventListener('mousedown', function(e) {
+      var evt = e || event;
+      dragging = true;
+      lastX = evt.clientX;
+      e.preventDefault();
+    }, false);
+
+    window.addEventListener('mousemove', function(e) {
+      var evt = e || event;
+      if (dragging) {
+        var delta = evt.clientX - lastX;
+        lastX = evt.clientX;
+        marginLeft += delta;
+        canvas.style.marginLeft = marginLeft + "px";
+      }
+      e.preventDefault();
+    }, false);
+
+    window.addEventListener('mouseup', function() {
+      dragging = false;
+    }, false);
+
+
+
+    // resize the canvas to fill browser window dynamically
+    window.addEventListener('resize', resizeCanvas, false);
+
+    function resizeCanvas() {
+      display.width = window.innerWidth;
+      display.height = window.innerHeight/3;
+
+      canvas.height = window.innerHeight/3;
+
+      drawScene();
+    }
+    resizeCanvas();
+
+    function drawSoil() {
+      // # topsoil
+      context.beginPath();
+      context.rect(0, 220, 3840, 10);
+      context.fillStyle = "gold";
+      context.fill();
+    }
+
+    function drawGround(){
+      // # ground beneath topsoil
+      context.beginPath();
+      context.rect(0, 230, 3200, 10);
+      context.fillStyle = "gold";
+      context.fill();
+    }
+    function drawGrassSingle(xPos) {
+      // # single blade of grass
+      context.beginPath();
+      context.rect(xPos, 215, 5, 15);
+      context.fillStyle = "green";
+      context.fill();
+    }
+    function drawGrassDouble(xPos) {
+      // # double blade of grass
+      context.beginPath();
+      context.rect(xPos, 210, 5, 20);
+      context.fillStyle = "green";
+      context.fill();
+
+      context.rect(xPos+5, 215, 5, 15);
+      context.fillStyle = "green";
+      context.fill();
+    }
+    function drawSapling(xPos) {
+      // sapling
+      context.beginPath();
+      context.rect(xPos, 200, 5, 30);//stem
+      context.fillStyle = "green";
+      context.fill();
+      context.rect(xPos-8, 205, 20, 2);//leaf
+      context.fillStyle = "green";
+      context.fill();
+    }
+
+    function drawPlant(xPos) {
+      // sapling
+      context.beginPath();
+      context.rect(xPos, 180, 5, 50);//stem
+      context.fillStyle = "brown";
+      context.fill();
+      context.beginPath();
+      context.rect(xPos-13, 205, 30, 3);//first leaves
+      context.fillStyle = "green";
+      context.fill();
+      context.rect(xPos-18, 183, 40, 5);//second leaves
+      context.fillStyle = "green";
+      context.fill();
+    }
+
+    function drawTree(xPos) {
+      // sapling
+      context.beginPath();
+      context.rect(xPos, 130, 10, 100);//stem
+      context.fillStyle = "brown";
+      context.fill();
+      context.beginPath();
+      context.rect(xPos-13, 150, 40, 5);//first leaves
+      context.fillStyle = "green";
+      context.fill();
+      context.rect(xPos-18, 140, 50, 7);//second leaves
+      context.fillStyle = "green";
+      context.fill();
+      context.beginPath();
+      context.rect(xPos-13, 130, 40, 5);//top branch
+      context.fillStyle = "green";
+      context.fill();
+    }
+
+    function drawCanopy() {
+      // sapling
+      context.rect(40, 200, 5, 30);
+      context.fillStyle = "green";
+      context.fill();
+
+      context.rect(32, 205, 20, 2);
+      context.fillStyle = "green";
+      context.fill();
+    }
+
+    function drawScene() {
 
       drawSoil();
       drawGround();
@@ -102,95 +226,141 @@
     }
 
     //params to add: days, meals
-    function drawSoil() {
-      // # topsoil
-      ctx.beginPath();
-      ctx.rect(0, 220, 320, 10);
-      ctx.fillStyle = "gold";
-      ctx.fill();
-    }
 
-    function drawGround(){
-      // # ground beneath topsoil
-      ctx.beginPath();
-      ctx.rect(0, 230, 320, 10);
-      ctx.fillStyle = "gold";
-      ctx.fill();
-    }
-    function drawGrassSingle(xPos) {
-      // # single blade of grass
-      ctx.beginPath();
-      ctx.rect(xPos, 215, 5, 15);
-      ctx.fillStyle = "green";
-      ctx.fill();
-    }
-    function drawGrassDouble(xPos) {
-      // # double blade of grass
-      ctx.beginPath();
-      ctx.rect(xPos, 210, 5, 20);
-      ctx.fillStyle = "green";
-      ctx.fill();
 
-      ctx.rect(xPos+5, 215, 5, 15);
-      ctx.fillStyle = "green";
-      ctx.fill();
-    }
-    function drawSapling(xPos) {
-      // sapling
-      ctx.beginPath();
-      ctx.rect(xPos, 200, 5, 30);//stem
-      ctx.fillStyle = "green";
-      ctx.fill();
-      ctx.rect(xPos-8, 205, 20, 2);//leaf
-      ctx.fillStyle = "green";
-      ctx.fill();
-    }
+  })();
 
-    function drawPlant(xPos) {
-      // sapling
-      ctx.beginPath();
-      ctx.rect(xPos, 180, 5, 50);//stem
-      ctx.fillStyle = "brown";
-      ctx.fill();
-      ctx.beginPath();
-      ctx.rect(xPos-13, 205, 30, 3);//first leaves
-      ctx.fillStyle = "green";
-      ctx.fill();
-      ctx.rect(xPos-18, 183, 40, 5);//second leaves
-      ctx.fillStyle = "green";
-      ctx.fill();
-    }
+  // var c = document.getElementById("myCanvas");
+  // var context = c.getContext("2d");
+  // drawScene();
+  // function drawScene(){
+  //
+  //   drawSoil();
+  //   drawGround();
+  //
+  //   switch (gon.count){
+  //     case 1: drawGrassSingle(20);
+  //     break;
+  //     case 2: drawGrassDouble(40);
+  //     break;
+  //     case 3: drawSapling(60);
+  //     break;
+  //     case 4: drawPlant(80);
+  //     break;
+  //     case 5: drawTree(100);
+  //     break;
+  //     case 6: drawGrassSingle(20);
+  //     drawGrassDouble(50);
+  //     drawSapling(80);
+  //     drawPlant(120);
+  //     drawTree(160);
+  //     break;
+  //     case 7: drawGrassDouble(20);
+  //     drawGrassDouble(50);
+  //     drawSapling(80);
+  //     drawPlant(120);
+  //     drawTree(160);
+  //     break;
+  //     case 8: drawGrassDouble(20);
+  //     drawSapling(50);
+  //     drawPlant(80);
+  //     drawTree(120);
+  //     drawTree(160);
+  //     case 9: drawSapling(20);
+  //     break;
+  //   }
+  // }
+  //
+  // //params to add: days, meals
+  // function drawSoil() {
+  //   // # topsoil
+  //   context.beginPath();
+  //   context.rect(0, 220, 320, 10);
+  //   context.fillStyle = "gold";
+  //   context.fill();
+  // }
+  //
+  // function drawGround(){
+  //   // # ground beneath topsoil
+  //   context.beginPath();
+  //   context.rect(0, 230, 320, 10);
+  //   context.fillStyle = "gold";
+  //   context.fill();
+  // }
+  // function drawGrassSingle(xPos) {
+  //   // # single blade of grass
+  //   context.beginPath();
+  //   context.rect(xPos, 215, 5, 15);
+  //   context.fillStyle = "green";
+  //   context.fill();
+  // }
+  // function drawGrassDouble(xPos) {
+  //   // # double blade of grass
+  //   context.beginPath();
+  //   context.rect(xPos, 210, 5, 20);
+  //   context.fillStyle = "green";
+  //   context.fill();
+  //
+  //   context.rect(xPos+5, 215, 5, 15);
+  //   context.fillStyle = "green";
+  //   context.fill();
+  // }
+  // function drawSapling(xPos) {
+  //   // sapling
+  //   context.beginPath();
+  //   context.rect(xPos, 200, 5, 30);//stem
+  //   context.fillStyle = "green";
+  //   context.fill();
+  //   context.rect(xPos-8, 205, 20, 2);//leaf
+  //   context.fillStyle = "green";
+  //   context.fill();
+  // }
+  //
+  // function drawPlant(xPos) {
+  //   // sapling
+  //   context.beginPath();
+  //   context.rect(xPos, 180, 5, 50);//stem
+  //   context.fillStyle = "brown";
+  //   context.fill();
+  //   context.beginPath();
+  //   context.rect(xPos-13, 205, 30, 3);//first leaves
+  //   context.fillStyle = "green";
+  //   context.fill();
+  //   context.rect(xPos-18, 183, 40, 5);//second leaves
+  //   context.fillStyle = "green";
+  //   context.fill();
+  // }
+  //
+  // function drawTree(xPos) {
+  //   // sapling
+  //   context.beginPath();
+  //   context.rect(xPos, 130, 10, 100);//stem
+  //   context.fillStyle = "brown";
+  //   context.fill();
+  //   context.beginPath();
+  //   context.rect(xPos-13, 150, 40, 5);//first leaves
+  //   context.fillStyle = "green";
+  //   context.fill();
+  //   context.rect(xPos-18, 140, 50, 7);//second leaves
+  //   context.fillStyle = "green";
+  //   context.fill();
+  //   context.beginPath();
+  //   context.rect(xPos-13, 130, 40, 5);//top branch
+  //   context.fillStyle = "green";
+  //   context.fill();
+  // }
+  //
+  // function drawCanopy() {
+  //   // sapling
+  //   context.rect(40, 200, 5, 30);
+  //   context.fillStyle = "green";
+  //   context.fill();
+  //
+  //   context.rect(32, 205, 20, 2);
+  //   context.fillStyle = "green";
+  //   context.fill();
+  // }
+  // </script>
 
-    function drawTree(xPos) {
-      // sapling
-      ctx.beginPath();
-      ctx.rect(xPos, 130, 10, 100);//stem
-      ctx.fillStyle = "brown";
-      ctx.fill();
-      ctx.beginPath();
-      ctx.rect(xPos-13, 150, 40, 5);//first leaves
-      ctx.fillStyle = "green";
-      ctx.fill();
-      ctx.rect(xPos-18, 140, 50, 7);//second leaves
-      ctx.fillStyle = "green";
-      ctx.fill();
-      ctx.beginPath();
-      ctx.rect(xPos-13, 130, 40, 5);//top branch
-      ctx.fillStyle = "green";
-      ctx.fill();
-    }
-
-    function drawCanopy() {
-      // sapling
-      ctx.rect(40, 200, 5, 30);
-      ctx.fillStyle = "green";
-      ctx.fill();
-
-      ctx.rect(32, 205, 20, 2);
-      ctx.fillStyle = "green";
-      ctx.fill();
-    }
-    </script>
-
-  </body>
-  </html>
+</body>
+</html>
