--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Mileage</title>
+  <title>Plant-Baser</title>
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
 
@@ -9,7 +9,7 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 
   <%= include_gon %>
-  
+
 </head>
 
 <body>
