added bootstrap meta for responsiveness

--- a/app/views/home_screen/index.html.erb
+++ b/app/views/home_screen/index.html.erb
@@ -1,20 +1,19 @@
-<!DOCTYPE html>
-<html>
 
 <head>
   <%= javascript_include_tag 'application' %>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
   integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8="
   crossorigin="anonymous"></script>
-  <script type="text/javascript" charset="utf-8">
+  <!-- <script type="text/javascript" charset="utf-8">
   // alert(gon.meals[1].created_at)
-  </script>
+  </script> -->
 </head>
 
 <body>
 
   <!-- GAME DISPLAY  -->
   <div id="gameDisplay" style="overflow: hidden">
+    <!-- change width to px for scrollableGame -->
     <canvas id="scrollableGame" width="3840px"></canvas>
   </div>
   <!--
