--- a/app/views/meals/index.html.erb
+++ b/app/views/meals/index.html.erb
@@ -1,5 +1,5 @@
-<h1>Listing environmentally concious meals</h1>
-
+<h1>Plant Based Meals</h1>
+<div>
 <table>
   <tr>
     <th>Date</th>
@@ -23,5 +23,5 @@
 
   <% end %>
 </table>
-
+</div>
 <p> Successful Meals: <%= @count %> </p>
