attempt to fix sidescroll bug on mobile

--- a/app/views/home_screen/index.html.erb
+++ b/app/views/home_screen/index.html.erb
@@ -13,9 +13,10 @@
 <body>
 
   <!-- GAME DISPLAY  -->
-  <div id="gameDisplay" style="overflow: hidden">
-    <!-- change width to px for scrollableGame -->
-    <canvas id="scrollableGame" ></canvas>
+  <div id="gameDisplay" > <!--style="overflow: hidden"-->
+
+    <canvas id="scrollableGame" ></canvas> <!-- width="3840px" -->
+
   </div>
   <!--
   <h1>VegRising POC</h1>
@@ -28,6 +29,8 @@
 <!-- <a href="#" class="btn btn-lg btn-primary">Sign up now!</a> -->
 
 <!-- Features -->
+
+<input type="search" class="form-control" placeholder="Find Restaurants">
 <div class="btn-group">
 
 
