added fixed canvas in div

--- a/app/views/home_screen/index.html.erb
+++ b/app/views/home_screen/index.html.erb
@@ -14,7 +14,7 @@
   <!-- GAME DISPLAY  -->
   <div id="gameDisplay" > <!--style="overflow: hidden"-->
 
-    <canvas id="scrollableGame" ></canvas> <!-- width="3840px" -->
+    <canvas id="scrollableGame" height="window.innerheight" width="window.innerWidth"></canvas> <!-- width="3840px" -->
 
   </div>
   <!--
